src/localpen/assets/localpen.css
/* ... */
.switch input:checked + .slider {
  background-color: #2196f3;
}

.switch input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

.switch input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

.switch .slider.round {
  border-radius: 16px;
}

.switch .slider.round:before {
  border-radius: 50%;
}

#notifications {
  display: inline-block;
  position: absolute;
  bottom: 0;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  text-align: center;
  padding: 10px;
  color: #2e2e2e;
  background-color: #f5f6fc;
  border: 1px solid black;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  box-shadow: 0 6px 12px #0000002d;
  -webkit-animation: slideIn 0.4s;
  animation: slideIn 0.4s forwards;
}

#notifications.hidden {
  bottom: -200px;
  -webkit-animation: slideOut 0.4s;
  animation: slideOut 0.4s forwards;
}

#notifications.error {
  color: crimson;
  background-color: #fff5f6;
}

@-webkit-keyframes slideIn {
  from {
    bottom: -200px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}

@keyframes slideIn {
  from {
    bottom: -200px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}
@-webkit-keyframes slideOut {
  from {
    bottom: 0;
    opacity: 1;
  }
  to {
    bottom: -200px;
    opacity: 0;
  }
}
@keyframes slideOut {
  from {
    bottom: 0;
    opacity: 1;
  }
  to {
    bottom: -200px;
    opacity: 0;
  }
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes overlayfadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.7;
  }
}

@keyframes overlayfadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.7;
  }
}
@-webkit-keyframes fadeOut {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes fadeOut {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes overlayfadeOut {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0;
  }
}
@keyframes overlayfadeOut {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0;
  }
}

#overlay,
#modal-container {
  z-index: 2000;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  overflow: hidden;
}
#overlay {
  animation: overlayfadeIn 0.4s forwards;
}
#modal-container {
  animation: fadeIn 0.4s forwards;
}
#overlay.hidden {
  animation: overlayfadeOut 0.4s forwards;
}
#modal-container.hidden {
  animation: fadeOut 0.4s forwards;
}
#overlay {
  background-color: black;
  opacity: 0.7;
}
#modal-container {
  display: flex;
  align-items: center;
  justify-content: center;
}
#modal {
  display: flex;
  width: 80vw;
  height: 80vh;
  background-color: whitesmoke;
  border-radius: 5px;
  padding: 10px;
  opacity: 1;
  overflow: hidden;
}
#modal.small {
  width: 400px;
  height: 180px;
}
#modal #list-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  height: 100%;
}

#modal .modal-title {
  color: darkslategrey;
  font-weight: 700;
  font-size: 1.4em;
  height: 40px;
  margin: 20px;
}
#modal.small .modal-title {
  margin: 10px;
}
#modal #prompt-screen {
  width: 100%;
  display: flex;
  flex-direction: column;
}
#modal .buttons {
  display: flex;
  justify-content: space-evenly;
}

#modal .button {
  place-self: center;
  margin: 5px 10px;
  padding: 5px;
  width: 100px;
  outline: none;
  border: 1px solid darkslategrey;
  border-radius: 3px;
  font-size: 1em;
  cursor: pointer;
  box-shadow: 0 3px 6px #0000002d;
}

#modal #list-container .list-button:hover {
  box-shadow: 0 1px 2px #0000002d;
  transform: translateY(1px) 0.5s;
}

#modal #list-container #delete-all-button {
  color: crimson;
  background-color: #fff5f6;
}

@media only screen and (max-width: 768px) {
  #modal #list-container .modified-date span {
    display: none;
  }
}

#modal .button.hidden {
  display: none;
}

#modal ul.open-list {
  margin: 0;
  padding: 0;
  width: 100%;
  height: calc(100% - 80px);
  overflow: auto;
  text-align: center;
}

#modal .open-list li {
  display: inline-flex;
  align-items: center;
  width: 80%;
  /* height: fit-content; */
  text-align: left;
  list-style: none;
  margin: 10px auto;
  height: 4em;
  padding: 0;
  border: 1px solid grey;
  background-color: #f5f6fc;
  box-shadow: 0 3px 6px #0000002d;
  border-radius: 3px;
  transition: transform 0.5s ease-out;
  transform: scaleY(1);
  overflow: hidden;
}
#modal .open-list li:hover {
  box-shadow: 0 1px 2px #0000002d;
  transform: translateY(1px) 0.5s;
}
@keyframes disappear {
  0% {
    opacity: 1;
    height: 4em;
    margin: 10px auto;
  }

  100% {
    opacity: 0;
    height: 0;
    margin: 0 auto;
  }
}
#modal #list-container li.hidden {
  animation: disappear 500ms forwards;
}

#modal #list-container li.hidden * {
  display: none !important;
}

#modal #list-container li a {
  flex-grow: 1;
  display: block;
  margin: 0;
  padding: 10px;
  text-decoration: none;
  color: darkslategrey;
  font-weight: 700;
}

#modal #list-container li a .open-title {
  margin: 5px;
}

#modal #list-container a .modified-date {
  margin-left: 5px;
  font-size: 0.8em;
  font-weight: 600;
  color: grey;
}

.delete-button,
.clear-button {
  cursor: pointer;
  margin: 10px;
  vertical-align: middle;
  border: none;
  color: inherit;
  border-radius: 50%;
  background: transparent;
  position: relative;
  width: 32px;
  height: 32px;
  opacity: 0.6;
}

.delete-button:focus,
.delete-button:hover,
.clear-button:focus,
.clear-button:hover {
  opacity: 1;
  background: rgba(128, 128, 128, 0.5);
}

.delete-button:active,
.clear-button:active {
  background: rgba(128, 128, 128, 0.9);
}

.delete-button::before,
.delete-button::after {
  content: ' ';
  position: absolute;
  top: 50%;
  left: 50%;
  height: 20px;
  width: 4px;
  background-color: currentColor;
}
/* ... */

